--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -26,6 +26,7 @@
                 android:text="@string/title_create_account"
                 android:textSize="50sp"
                 android:textStyle="bold"
+                android:textColor="@color/black_titles"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginTop="50dp"
@@ -40,8 +41,9 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 app:boxStrokeWidth="0dp"
-                app:boxBackgroundColor="@color/black"
-                app:startIconDrawable="@drawable/email_24">
+                app:boxBackgroundColor="@color/gray_input"
+                app:startIconDrawable="@drawable/email_24"
+                app:startIconTint="@color/gray_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -58,9 +60,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 app:boxStrokeWidth="0dp"
-                app:boxBackgroundColor="@color/black"
+                app:boxBackgroundColor="@color/gray_input"
                 app:startIconDrawable="@drawable/lock_24"
-                app:endIconMode="password_toggle">
+                app:startIconTint="@color/gray_icon"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/gray_icon">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -92,7 +96,7 @@
                 android:id="@+id/materialButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/blue_light"
                 android:text="@string/sign_up"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
@@ -114,12 +118,15 @@
                 android:gravity="center">
 
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    app:srcCompat="@drawable/phone_24"
-                    android:backgroundTint="@color/white"
-                    android:elevation="10dp"
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_google_g"
+                    app:contentPaddingStart="20dp"
+                    app:contentPaddingEnd="20dp"
+                    app:strokeWidth="0.5dp"
+                    app:strokeColor="@color/gray_icon"
+                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                     android:contentDescription="@string/description" />
 
                 <Space
@@ -128,12 +135,15 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"/>
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    app:srcCompat="@drawable/phone_24"
-                    android:backgroundTint="@color/white"
-                    android:elevation="10dp"
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    app:contentPaddingStart="20dp"
+                    app:contentPaddingEnd="20dp"
+                    app:strokeWidth="0.5dp"
+                    app:strokeColor="@color/gray_icon"
+                    android:src="@drawable/ic_phone_android"
+                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                     android:contentDescription="@string/description" />
             </LinearLayout>
 
