--- a/app/src/main/res/layout/activity_login_account.xml
+++ b/app/src/main/res/layout/activity_login_account.xml
@@ -93,7 +93,7 @@
             </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton"
+                android:id="@+id/btnSignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_light"
@@ -175,6 +175,7 @@
                     android:layout_marginEnd="5dp"/>
 
                 <TextView
+                    android:id="@+id/tvSignUp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
